--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^9.1.0",
     "@fontsource/poppins": "^5.0.15",
+    "ckeditor5": "^43.1.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
